# birthday

./: README.md  birthday.db  pyproject.toml
alembic/: env.py
alembic/versions/: 7a87c283b65a_start_birthday.py  7cc8b857eedd_add_user_congratulations.py
birthday/: main.py
birthday/api/: routers.py  validators.py
birthday/api/endpoints/: __init__.py  user.py  user_congratulations.py  user_subscriptions.py
birthday/core/: __init__.py  base.py  config.py  db.py  init_db.py  user.py
birthday/crud/: __init__.py  base.py  user_congratulations.py  user_subscriptions.py
birthday/models/: __init__.py  user.py  user_congratulations.py  user_subscriptions.py
birthday/schemas/: user.py  user_congratulations.py  user_subscriptions.py
